when swaping cols or rows insert notes at the right place, fdo#53979

Change-Id: I1228b3a064623e810265b47776e33f81f4bf0e51